# coding_life

./: .gitignore  README.md
ai/decision_tree/: dat.csv  decision_tree.py  demo.py
ai/decision_tree/utils/: tree_plot.py
alg_datastructure/: CMakeLists.txt
alg_datastructure/clrs/: insertionsort.py  mergesort.py  quicksort.py
alg_datastructure/src/: base.h  dblist.c  dblist.h  dict.c  dict.h  dstring.c  dstring.h
alg_datastructure/tests/: t_dblist.c  t_dblist.h  t_dict.c  t_dstring.c  test.c
c_training/: CMakeLists.txt
note/: cpp_primer_plus.md  practical_common_lisp.md
note/cpp_primer/: a.out  ref.cpp
note/design_pattern/: SUMMARY.md
note/diary/: SUMMARY.md
note/mysql/index/: README.md
note_as_book/design_pattern/ch1/: Singleton.md
note_as_book/diary/: SUMMARY.md
note_as_book/diary/16_10/: 10.md
note_as_book/influxdb_note/: tsm1.md
note_as_book/mysql/: SUMMARY.md
note_as_book/mysql/index/: README.md
note_as_book/note_front/: SUMMARY.md
training/asm/: hello.asm
training/golang/: anonymous.go  args.go  arrayslice.go  assign.go  atomic.go  bit.go  chan.go  co.go  context.go  cp.go  defer.go  equal.go  errgroup.go  exit.go  float.go  fn.go  init.go  interface.go  json.go  map.go  math.go  nilreturn.go  panic.go  ptr.go  range.go  rec.go  ref.go  reflect.go  something.go  sort.go  str.go  struct.go  sync.go  te.go  type.go  typeassert.go  typeconvert.go  typedef.go
training/shell/: doc.sh  for.sh  func.sh  if.sh  select.sh  wget_many.sh
unp/: CMakeLists.txt  README.md  byte_order.c  clisrv.c  daytime_tcp_srv.c
unp/lib/: io.c  io.h
(+9 files in other folders)
